--- a/rmd/3_final.Rmd
+++ b/rmd/3_final.Rmd
@@ -9,16 +9,17 @@ output:
     theme: paper
     highlight: kate
     code_folding: hide
+    toc: true
     toc_depth: 3
-    toc_float: true
+    toc_float: false
 editor_options:
   chunk_output_type: console
 ---
 
 <style>
 .list-group-item.active, .list-group-item.active:hover, .list-group-item.active:focus {
-  background-color: #00d188;
-    border-color: #00d188;
+  background-color: #D21C5C;
+    border-color: #D21C5C;
 }
 
 body {
@@ -94,15 +95,16 @@ We applied a state of the art machine learning model (first published in 2017) t
 # 3 Research Findings 
 
 
-## 3.1 The importance of individial ranking factors
+## 3.1 The importance of individial ranking factors 
 
 The plot below indicates what factors are particulry important in impacting GMB rankings (a more technical explanation can be found below). We can conclude that having the same GMB city listed as in the search query has the largest effect on the ranking position, followed by the "type category is personal injury lawyer", # of reviews and the # of photos. Adding the string "lawyer or "attorney" to the title can also positively impact positions, according to our analysis. 
 
 GMB details such as adding street address, website domain, and phone number do not seem to be relevant. The same is true for social signals. 
 
 
-```{r feature_importance, echo=FALSE}
-  knitr::include_graphics(here::here("plots", "png", "feature_importance_1.png"))
+
+```{r, out.extra='style="border: none;"', out.width="100%", frameborder="0", echo=FALSE}
+knitr::include_url("https://plotly.com/~dancoup/168.embed?link=false&amp;modebar=false&amp;autosize=true", height="800")
 ```
 
 
@@ -172,9 +174,12 @@ The depended variables used in this study can be roughly organized into five mai
   knitr::include_graphics(here::here("plots", "png", "type_position_1.png"))
 ```
 
-```{r type_position_scaled, echo=FALSE}
-  knitr::include_graphics(here::here("plots", "png", "type_position_scaled_1.png"))
+###### {#common-business-types}
+
+```{r, out.extra='style="border: none;"', out.width="100%", frameborder="0", echo=FALSE}
+knitr::include_url("https://plotly.com/~dancoup/216.embed?link=false&amp;modebar=false&amp;autosize=true", height="600")
 ```
+
 
 
 Key takeaways:
@@ -207,30 +212,39 @@ knitr::kable(title_description_table, caption = "Basic information about titles 
   knitr::include_graphics(here::here("plots", "png", "description_missing_1.png"))
 ```
 
-```{r description_keywords_car, echo=FALSE}
-  knitr::include_graphics(here::here("plots", "png", "description_car_personal_1.png"))
+
+###### {#lawyer-attorney-title}
+
+```{r, out.extra='style="border: none;"', out.width="100%", echo=FALSE}
+knitr::include_url("https://plotly.com/~dancoup/186.embed?link=false&amp;modebar=false&amp;autosize=true", height="600")
 ```
 
-```{r description_keywords_lawyer, echo=FALSE}
-  knitr::include_graphics(here::here("plots", "png", "description_lawyer_attorney_1.png"))
+###### {#lawyer-attorney-description}
+```{r, out.extra='style="border: none;"', out.width="100%", echo=FALSE}
+knitr::include_url("https://plotly.com/~dancoup/184.embed?link=false&amp;modebar=false&amp;autosize=true", height="600")
 ```
 
-```{r description_keywords_city, echo=FALSE}
-  knitr::include_graphics(here::here("plots", "png", "description_city_1.png"))
+
+###### {#personal-car-accident-title}
+
+```{r, out.extra='style="border: none;"', out.width="100%", echo=FALSE}
+knitr::include_url("https://plotly.com/~dancoup/182.embed?link=false&amp;modebar=false&amp;autosize=true", height="600")
 ```
 
-```{r title_keywords_car, echo=FALSE}
-  knitr::include_graphics(here::here("plots", "png", "title_car_personal_1.png"))
+###### {#personal-car-accident-description}
+
+```{r, out.extra='style="border: none;"', out.width="100%", frameborder="0", echo=FALSE}
+knitr::include_url("https://plotly.com/~dancoup/182.embed?link=false&amp;modebar=false&amp;autosize=true", height="600")
 ```
 
-```{r title_keywords_lawyer, echo=FALSE}
-  knitr::include_graphics(here::here("plots", "png", "title_lawyer_attorney_1.png"))
-```
 
 ```{r title_keywords_city, echo=FALSE}
   knitr::include_graphics(here::here("plots", "png", "title_city_1.png"))
 ```
 
+```{r description_keywords_city, echo=FALSE}
+  knitr::include_graphics(here::here("plots", "png", "description_city_1.png"))
+```
 
 Key takeaways:
 
